# data-engineering-rag-chatbot

./: .gitignore  README.md  api.py  constants.py  data_models.py  dockerfile  function_app.py  ingestion.py  pyproject.toml  rag.py  requirements.txt
frontend/: app.py
knowledge_base/transcripts.lance/_transactions/: 0-63d1a083-1247-4f29-b7ef-2a95fc742b43.txn  1-b9eacf7f-f617-4352-9ec6-33eddfb28415.txn  10-7f9dd430-da5d-4001-9418-5b9ca95c1a23.txn  100-7dd719d2-e743-4f5a-9980-b429fac5a439.txn  1000-385cfe87-d709-48b6-b251-7b82016b8da1.txn  1001-25367a5d-4036-49ed-808f-25f9e7a43296.txn  1002-76bfd6ce-e4d2-4a5a-8ce4-dc43726fe1ef.txn  1003-dece4d19-4d60-4cb2-9b59-297e9981dce9.txn  1004-c7efc3e3-f7ff-4762-97aa-e0176444ed0d.txn  1005-8a307fd6-6bed-4ac4-bfd5-ab483b656f53.txn  1006-d415073a-ed2a-4ae1-9097-2df94a630a18.txn  1007-12025fea-ace1-47aa-8fb0-2ae9491bbe9e.txn  1008-b66f8d37-84ee-4ce3-880f-e7ed77b5df5b.txn  1009-73c27bcb-c540-4ca8-ac60-89db90afdf85.txn  101-1f3e3a86-7a47-4bb1-a87e-c92d3a38638d.txn  1010-878321d2-bc38-40c5-acee-6451c0874266.txn  1011-df591364-e11a-413e-9f86-3bcbba5a08ab.txn  1012-d102eb62-a75d-47e0-889a-f30a85e57bdf.txn  1013-1665ab7a-d027-4115-be5b-c54599233e12.txn  1014-e45589af-a648-4448-893b-94122621aaf9.txn  1015-92b34cb0-677f-4e7d-bc00-1186a51f4a41.txn  1016-579903b8-5ba5-462a-bfbd-b26964946504.txn  1017-44254aec-175f-44d2-bde1-b13f0195340b.txn  1018-a08ba870-e2ba-4292-b979-752d8705e7e9.txn  1019-865419d6-d08f-406f-b7f2-56e36a6a6884.txn  102-a7cdffc4-d7fe-4da9-9df2-785a2258854f.txn  1020-492e3368-4f1d-4759-b019-f440a3e24c3e.txn  (+1027 more)
